# atarigon

./: .gitignore  CODE_OF_CONDUCT.md  LICENSE  README.md  pyproject.toml
.github/workflows/: release.yml
agents/: ninja.py  pioneer.py  reeniop.py
atarigon/: .main.py.swp  api.py  exceptions.py  main.py
