[tool.poetry]
name = "atarigon"
version = "0.1.1"
description = ""
authors = ["blazaid <alber.diaz@proton.me>"]
readme = "README.md"

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.scripts]
atarigon = "atarigon.main:main"

[build-system]
requires = ["poetry-core"]
build-backend = "poetry.core.masonry.api"
